<resources>
    <string name="app_name">DexApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_course">View Course</string>
    <string name="title_activity_portfolio">Portfolio</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name ="action_sign_in_with_google">Sign in with Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">There is no such user</string>
    <string name="error_username_not_available">This username is already in use</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_registration_failed">Registration failed!</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="continueText">Continue</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="action_register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_username">Username</string>
    <string name="profile_image">Profile Picture</string>
    <string name="card_title_recommendations">Recommendations</string>
    <string name="card_title_profile">Profile</string>
    <string name="card_title_library">Library</string>
    <string name="title_activity_welcome">DexApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
